test/files/neg/error-in-apply-args-3.scala
object O {
  def tooManyArgs(s: String, i: Int): Unit = ()

  tooManyArgs(math.floor("not a num"))
}